# hashbrown

./: .env  .env.example  .env.test  .eslintrc.sort-import.json  .gitignore  .nxignore  .prettierrc  AGENTS.md  BINARIES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSPIRATION.md  PLAN.md  README.md  api-extractor.base.json  eslint.config.mjs  netlify.toml  nx.json  package-lock.json  package.json  project.json  tsconfig.base.json  tsconfig.docs.json
.codex/skills/coding-agent/: SKILL.md
.codex/skills/design-doc-interviewer/: SKILL.md
.cursor/rules/: nx-rules.mdc
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: install-nx.sh  post-create.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/instructions/: nx.instructions.md
.github/workflows/: assign_issue.yml  cloudflare-preview.yml  cloudflare-production.yml  netlify-preview.yml  netlify-production.yml  netlify-samples-finance.yml  netlify-samples-smart-home.yml  nightly.yml  npm-publish.yml  pr-main.yml
.husky/: pre-commit
demo/: project.json
demo-backend/: project.json
demo-backend/src/: main.ts
demo/src/: index.html  styles.scss
demo/src/app/: app.component.ts  app.config.ts  app.routes.ts  auth.service.ts
design/angular/: expose-component-providers.md  expose-markdown.md  inject-imperative-json-parser.md  inject-json-parser.md  magic-text-renderer.md
design/core/: generative-ui.md  json-ast-schema-integration.md  json-parser-integration.md  json-parser.md  magic-text-parser.md  open-responses-stories.json  open-responses.md  schema-constraints.md  standard-json-schema.md  streaming-initialization.md  ui-kit.md  upgrade-json-v0-5.md
design/google/: thought-signatures.md
design/ideas/: 2026-01-25-streaming-json-parser-react-hook-angular-signal.md  2026-01-25-uikit-instance-serialization-hydration.md  2026-01-25-vendor-agnostic-tool-preambles.md
design/react/: expose-markdown.md  magic-text-renderer.md  use-imperative-json-parser.md  use-json-parser.md
design/www/: documentation-authoring.md
docs/: release-runbook.md  vad-audio-worklet-context.md
docs/superpowers/plans/: 2026-07-06-ollama-client-options.md  2026-07-07-angular-reactive-resource-options.md  2026-07-07-docs-order-angular-referential-equality.md  2026-07-11-node-24-migration.md
docs/superpowers/specs/: 2026-07-06-ollama-client-options-design.md  2026-07-07-angular-reactive-resource-options-design.md  2026-07-07-docs-order-angular-referential-equality-design.md  2026-07-11-node-24-migration-design.md
projects/cassini/: README.md  ng-package.json  package.json  project.json  vite.config.mts
projects/cassini/src/: chat-resource.fn.ts  create-tool.fn.ts  index.ts  natural-language-query-resource.fn.ts  predict-text-resource.fn.ts  prediction-resource.fn.ts  prediction-v2-resource.fn.ts  rich-chat-resource.fn.ts  schema.ts  tool-result-resource.fn.ts  types.ts
projects/ollama/: jest.config.ts  package.json  project.json
projects/ollama/src/: index.ts
samples/_types/: project.json
samples/_types/samples-types/: project.json  tsconfig.lib.json
samples/_types/src/: index.ts
samples/fast-food/angular/: jest.config.ts  project.json  wrangler.toml
samples/fast-food/cloudflare/: project.json  tsconfig.app.json
samples/fast-food/react/: index.html  package.json  project.json  vite.config.ts
samples/fast-food/server/: project.json
samples/fast-food/tools/: download-favicons.ts
samples/finance/angular/: jest.config.ts  netlify.toml  project.json  tsconfig.spec.json  wrangler.toml
samples/finance/client/: netlify.toml  project.json
samples/finance/cloudflare/: project.json
samples/finance/netlify/: project.json  tsconfig.app.json
samples/finance/react/: package.json  project.json  vite.config.ts
samples/finance/react-client/: index.html  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts
samples/finance/server/: project.json  tsconfig.app.json
samples/finance/tools/: download-favicons.ts
samples/food/angular/: project.json
samples/food/server/: project.json
samples/kitchen-sink/angular/: project.json  tsconfig.json
samples/kitchen-sink/server/: netlify.toml  project.json
samples/lambda-chat/: README.md  project.json  serverless.ts  tsconfig.app.json
samples/lambda-chat/src/: chat.ts
samples/langchain/angular/: project.json  tsconfig.json
samples/langchain/next/: README.md  jest.config.ts  project.json  tsconfig.json
samples/langchain/next-e2e/: playwright.config.ts  project.json
samples/langchain/node/: project.json
samples/react-vox-demo/: index.html  project.json  vite.config.ts
samples/server/: project.json
scripts/: deploy-smoke.mjs  deploy-smoke.spec.mjs  verify-angular-22-consumer.mjs  verify-npm-release.mjs  verify-npm-release.spec.mjs  verify-release-versions.mjs  verify-release-versions.spec.mjs
skills/: angular.md  nx.md  worktrees.md
tools/testing/: jest.config.ts  project.json  tsconfig.json  tsconfig.spec.json
utilities/: jest.config.ts  package.json  project.json
wasm/: README.md
wasm/audio-worklet-essentials/: CMakeLists.txt  Dockerfile  main.c  test.html
wasm/audio-worklet-mic-input/: CMakeLists.txt  main.c  test.html
wasm/audio-worklet-mic-magnitude/: build.sh  patch-aw.js
wasm/audio-worklet-mic-vad/: CMakeLists.txt  Dockerfile  README.md  main.c  test-server.js  test.html  test.sh
wasm/vad/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  example.html  promote.sh  rtc_stubs.c  test.sh  vad_wrapper.js
wasm/vad-audio-worklet/: .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  embed-singlefile.mjs  main.c  patch-aw.js  promote.sh  rtc_stubs.c  test.html  url-polyfill.js
www/: .ws-context  eslint.config.mjs  index.html  netlify.toml  package.json  project.json  tsconfig.json  vite.config.ts
www/analog/: DEPLOY.md  eslint.config.mjs  index.html  netlify.toml  package.json  project.json  tsconfig.app.json  tsconfig.json  vite.config.ts  wrangler.toml
www/netlify/: project.json
www/src/: styles.css  vite-env.d.ts
(+1370 files in other folders)
